--- a/build.gradle
+++ b/build.gradle
@@ -6,10 +6,12 @@ buildscript {
         mavenCentral()
     }
     ext.hilt_version = '2.35'
+    ext.jacoco_version = '0.8.4'
     dependencies {
         classpath "com.android.tools.build:gradle:4.2.1"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
+        classpath "org.jacoco:org.jacoco.core:$jacoco_version"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
