--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,7 @@ plugins {
     id 'kotlin-kapt'
     id 'dagger.hilt.android.plugin'
     id 'jacoco'
+    id 'androidx.navigation.safeargs'
 }
 
 task jacocoTestReport(type: JacocoReport, dependsOn: ['testDebugUnitTest', 'createDebugCoverageReport']) {
@@ -58,10 +59,11 @@ android {
     buildTypes {
         debug {
             testCoverageEnabled true
-            buildConfigField "String", "SERVER_URL", '"http://127.0.0.1:8080"'
+            buildConfigField "String", "SERVER_URL", '"http://192.168.1.102:3000/"'
         }
         release {
-            buildConfigField "String", "SERVER_URL", '"http://192.168.1.23:3000/"'
+            debuggable true
+            buildConfigField "String", "SERVER_URL", '"http://192.168.1.102:3000/"'
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
@@ -122,5 +124,4 @@ dependencies {
     androidTestImplementation('com.schibsted.spain:barista:3.6.0') {
         exclude group: 'org.jetbrains.kotlin' // Only if you already use Kotlin in your project
     }
-    androidTestImplementation 'com.squareup.okhttp3:mockwebserver:4.3.0'
 }
