--- a/build.gradle
+++ b/build.gradle
@@ -1,17 +1,19 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlin_version = "1.5.21"
     repositories {
         google()
-        mavenCentral()
+        jcenter()
     }
+    ext.kotlin_version = "1.4.10"
     ext.hilt_version = '2.35'
     ext.jacoco_version = '0.8.4'
+    ext.safe_args = '2.3.5'
     dependencies {
         classpath "com.android.tools.build:gradle:4.2.1"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
         classpath "org.jacoco:org.jacoco.core:$jacoco_version"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$safe_args"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -21,8 +23,7 @@ buildscript {
 allprojects {
     repositories {
         google()
-        mavenCentral()
-        jcenter() // Warning: this repository is going to shut down soon
+        jcenter()
     }
 }
 
