Workarond for errors in unit tests generated by jacoco

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,6 +8,12 @@ plugins {
     id 'androidx.navigation.safeargs'
 }
 
+tasks.withType(Test.class).configureEach {
+    jacoco {
+        excludes = ["*"]
+    }
+}
+
 task jacocoTestReport(type: JacocoReport, dependsOn: ['testDebugUnitTest', 'createDebugCoverageReport']) {
 
     reports {
