feature/Changed_layout_and_updated_article_object

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,11 +65,11 @@ android {
     buildTypes {
         debug {
             testCoverageEnabled true
-            buildConfigField "String", "SERVER_URL", '"http://192.168.1.102:3000/"'
+            buildConfigField "String", "SERVER_URL", '"http://192.168.1.101:3000/"'
         }
         release {
             debuggable true
-            buildConfigField "String", "SERVER_URL", '"http://192.168.1.102:3000/"'
+            buildConfigField "String", "SERVER_URL", '"http://192.168.1.101:3000/"'
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
@@ -115,7 +115,8 @@ dependencies {
     implementation "androidx.navigation:navigation-fragment-ktx:2.4.0-alpha05"
     implementation "androidx.navigation:navigation-ui-ktx:2.4.0-alpha05"
     implementation 'com.squareup.okhttp3:logging-interceptor:4.9.0'
-
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
 
     testImplementation 'junit:junit:4.13.1'
     testImplementation 'com.nhaarman.mockitokotlin2:mockito-kotlin:2.1.0'
